<resources>
    <string name="app_name">ArkMaster</string>
    <string name="signup_toptap">회원가입</string>
    <string name="signup_emailHint">E-mail을 입력해주세요.</string>
    <string name="signup_nickname">닉네임</string>
    <string name="signup_nicnameHint">닉네임을 입력해주세요.</string>
    <string name="signup_erroremail">이미 존재하는 이메일 입니다.</string>
    <string name="signup_errornickname">이미 존재하는 닉네임 입니다.</string>
    <string name="signup_name">이름</string>
    <string name="signup_nameHint">이름을 입력해주세요.</string>
    <string name="signup_errorname">이름을 입력해주세요.</string>
    <string name="signup_password">비밀번호</string>
    <string name="signup_passwordHint">비밀번호를 입력해주세요.</string>
    <string name="signup_errorpassword">비밀번호를 입력해주세요.</string>
    <string name="signup_checkpassword">비밀번호 확인</string>
    <string name="signup_checkpasswordHint">동일한 비밀번호를 입력해주세요.</string>
    <string name="signup_errorcheckpassword">비밀번호가 일치하지 않습니다.</string>
    <string name="signup_buttonText">회원 가입</string>
    <string name="signin_next">공략 보러 가기</string>
    <string name="signin_toSignup">영웅 등록 하러 가기</string>
    <string name="signin_topText">LostARK.GG</string>
    <string name="signin_loginText">로그인</string>
    <string name="signin_email">Email</string>
    <string name="toast_check_login_info">이메일과 비밀번호를 모두 입력해주세요.</string>
    <string name="toast_failed_login">이메일 또는 비밀번호가 일치하지 않습니다.</string>
    <string name="locale_korean">한국어</string>
    <string name="locale_english">영어</string>


    <string name="signup_pwlimit">소문자 대문자 특수문자를 포함한 8~16자</string>
    <string name="home_kr">홈</string>
    <string name="my_page_kr">마이 페이지</string>
    <string name="user_name">닉네임</string>
    <string name="user_email">이메일</string>
    <string name="main_character_image_setting">설정</string>
    <string name="my_comments">댓글</string>
    <string name="button_my_page">마이 페이지</string>
    <string name="button_home">홈</string>
    <string name="transition_image">transImage</string>
    <string name="transition_name">transName</string>
    <string name="set_main_character_popup">대표 캐릭터 설정</string>
    <string name="text_search_hint">캐릭터 이름으로 검색해 보세요.</string>
    <string name="btn_register">등록 하기</string>
    <string name="text_character_type">계열</string>
    <string name="text_chatacter_weapon">대표 무기</string>
    <string name="text_chatacter_identity">아이덴티티</string>
    <string name="hint_input_play_tips">나만의 플레이 팁을 알려주세요.</string>

    <string-array name="signup_spinnerarray">
        <item>최신순</item>
        <item>좋아요순</item>
        <item>리뷰순</item>
    </string-array>

    <string-array name="character_names">
        <item>브레이커</item>>
        <item>소서리스</item>
        <item>스트라이커</item>
        <item>리퍼</item>
        <item>건슬링어</item>
        <item>바드</item>
        <item>서머너</item>
        <item>블레이드</item>
        <item>창술사</item>
        <item>아르카나</item>
        <item>홀리나이트</item>
    </string-array>


    <string-array name="character_names_english">
        <item>Breaker</item>>
        <item>Sorceress</item>
        <item>Striker</item>
        <item>Reaper</item>
        <item>Gunslinger</item>
        <item>Bard</item>
        <item>Summoner</item>
        <item>Blade</item>
        <item>Lance Master</item>
        <item>Arcana</item>
        <item>Holyknight</item>
    </string-array>

    <string-array name="character_types">
        <item>무도가</item>>
        <item>마법사</item>
        <item>무도가</item>
        <item>암살자</item>
        <item>헌터(여)</item>
        <item>마법사</item>
        <item>마법사</item>
        <item>암살자</item>
        <item>무도가</item>
        <item>마법사</item>
        <item>전사</item>
    </string-array>

    <string-array name="character_comments">
        <item>한번 손에 쥔 건 놓치지 않지, 천명마저도!</item>>
        <item>자연의 섭리를 깨달은 자, 전장을 지배하리라!</item>
        <item>오로지, 극을 향하여 나아갈 뿐!</item>
        <item>그림자는 소리를 내지 않는 법이지.</item>
        <item>총 앞에서는, 모두가 솔직해지는 법이지</item>
        <item>이 아름다운 선율은 피바다가 될 전장의 전주곡이에요.</item>
        <item>정령들이여 세상을 위협하는 적들을 쓰러뜨려라!</item>
        <item>내재된 악마성을 절제하며, 혼돈의 검을 휘두르는 자!</item>
        <item>전장의 창이 되어, 적을 섬멸하라!</item>
        <item>이 세상의 운명은 이미 내 카드 안에 담겨 있다!</item>
        <item>빛의 수호자여, 신의 이름으로 세상을 심판하라!</item>
    </string-array>

    <string-array name="character_descriptions">
        <item>브레이커는 우수한 기동성과 강력한 한방을 보유한 클래스입니다. 공격 포지션을 자유롭게 선택할 수 있으며, 여러가지 콤보를 사용해 몰아치는 전투를 기대해 볼 수 있습니다.</item>
        <item>소서리스는 세 가지 원소를 기본으로 한 강력한 마법을 다루는 클래스입니다. 소서리스는 광역 마법을 사용해 다수의 적을 손쉽게 처리할 수 있으며, 캐스팅 마법으로 강력한 적에게 높은 피해를 선사할 수도 있습니다. 신비한 마력 게이지를 획득해 얻을 수 있는 아이덴티티를 잘 활용한다면 전장을 지배하는 영웅이 될 수 있습니다.</item>
        <item>스트라이커는 질풍처럼 적들을 몰아붙이는 무도가 클래스입니다. 빠른 움직임에 다양한 체술을 두루 갖추고 있기 때문에 순식간에 적을 타격한 후 화려한 공중 콤보를 이어갈 수 있으며, 강력한 엘리멘탈 스킬들을 활용해 전장의 판도를 뒤집을 수도 있습니다.</item>
        <item>리퍼는 대거와 그림자 스킬을 사용하는 암살자 클래스입니다. 리퍼는 날렵한 움직임을 이용해 적을 습격하여, 적에게 공포를 선사합니다. 다양한 독을 사용하여 지속적인 피해를 줄 수도 있고, 은신을 통해 은밀하게 적의 배후로 이동해 강력한 공격을 할 수도 있습니다.</item>
        <item>건슬링어는 세 가지 총기를 사용하여 빠르게 움직이며 스타일리쉬한 전투를 펼치는 원거리 클래스 입니다. 대상과의 거리, 혹은 공격하고자 하는 범위에 따라 그에 알맞은 스탠스를 선택하여 더블 핸드건, 샷건, 라이플로 가장 효과적인 전투를 만들어 낼 수 있습니다.</item>
        <item>바드는 성스러운 하프를 이용하여 적을 공격하거나 아군을 서포트하는 원거리 서포트형 클래스입니다. 날카로운 음율로 적을 공격하기도 하고, 아름다운 운율로 아군을 치유하며, 파티에서는 선봉보다는 후방에서 아군을 돕거나 각종 버프를 이용해 아군을 지원하는 역할을 수행할 수 있습니다. 공격력은 다소 낮은 편이지만 아군을 지원하는 능력이 매우 뛰어나기 때문에 파티에서 꼭 필요로 하는 클래스 입니다.</item>
        <item>서머너는 보조 딜러나 탱커 역할을 담당할 수 있는 다양한 정령들과 함께 전투를 전개해 나가는 원거리 클래스입니다. 체력과 방어력이 낮아서 일정거리 이상을 유지하며 전투를 하는 것이 좋고, 만약 적들에게 거리를 잡히면 치명적일 수 있으나, 서머너가 가진 다양한 마법 스킬과 정령들을 적절히 조합한다면 위협적인 상황은 허용조차 되지 않을 것입니다.</item>
        <item>블레이드는 쌍검과 장검, 총 세개의 검을 사용하는 암살자입니다. 항상 차분한 이성을 유지하며, 날렵한 쌍검과 묵직한 장검에 혼돈의 힘을 담아 빠르고 절도 있게 적들을 공격합니다. 특히, 쌍검과 장검을 활용한 연계 공격은 숨쉴 틈 없는 공격을 난사해 적을 제압합니다.</item>
        <item>창술사는 상황에 맞게 스탠스를 변경할 수 있는 클래스입니다. 변형 창을 사용해 주변에 위치한 적들을 쓸어버릴 수 있는 난무 스탠스, 날카로운 창으로 순간 높은 피해를 줄 수 있는 집중 스탠스를 사용해 전장의 적들을 단숨에 제압할 수 있습니다.</item>
        <item>아르카나는 마법사 클래스로 체력과 방어력이 약해 위험에 쉽게 노출 되기도 하는 반면, 현란하고 빠른 몸놀림으로 중거리 전투에서 강력한 모습을 보이며, 다이나믹한 전투로 상대를 유린 할 수도 있는 클래스 입니다. 스킬 한방 한방이 강력하진 않지만, 적에게 카드의 마력이 담긴 스택트 효과를 쌓고, 루인 스킬을 이용하여 스택트 효과를 폭발시킴으로 증폭된 대미지를 선사할 수 있습니다.</item>
        <item>홀리나이트는 신념의 검과 신앙의 힘을 사용하는 서포트형 클래스입니다. 성서를 이용한 신성 스킬 및 버프를 활용해 아군을 후방에서 지원하거나 검을 이용한 징벌 스킬들을 통해 전장의 선봉에 설 수 있습니다.</item>
    </string-array>

    <string-array name="character_weapons">
        <item>헤비 건틀릿</item>
        <item>롱 스태프</item>
        <item>엘리멘탈 건틀렛</item>
        <item>대거</item>
        <item>샷건, 더블 핸드건, 라이플</item>
        <item>리아네 하프</item>
        <item>매직 스태프</item>
        <item>검</item>
        <item>창</item>
        <item>마법덱</item>
        <item>한손검</item>
    </string-array>

    <string-array name="character_energy_types">
        <item>기력/충격/투지 에너지</item>
        <item>마력 방출/점멸</item>
        <item>엘리멘탈 버블</item>
        <item>페르소나</item>
        <item>퀵 스탠스</item>
        <item>세레나데</item>
        <item>고대정령 소환</item>
        <item>블레이드 아츠</item>
        <item>듀얼 스탠스</item>
        <item>카드 덱</item>
        <item>신앙게이지</item>
    </string-array>

    <string-array name="character_special_skills">
        <item>기력/충격/투지 에너지 브레이커가 사용하는 기력과 충격 에너지는 상호 보완되는 형태를 취합니다. 기력 스킬을 사용하게 되면 기력 게이지가 감소하는 대신 충격 에너지가 증가하고, 충격 스킬을 사용하면 충격 에너지가 감소하는 대신 기력 에너지가 증가되는 형태입니다. 공격을 적에게 적중 시 투지 에너지를 획득할 수 있습니다. 투지 에너지를 사용하면, 스탠스가 변경되며 일시적으로 ‘권왕태세’ 상태가 되어 더욱 속도감 있는 전투를 할 수 있습니다.</item>
        <item>소서리스는 적에게 스킬을 적중 시킬 때마다, 신비한 마력 게이지를 획득할 수 있고 마력 방출 및 점멸을 사용할 수 있습니다. 마력 방출 스킬은 원소 마법을 강화하고 캐스팅 시간을 줄일 수 있는 유용한 스킬이며, 점멸 스킬은 특정 지점으로 빠르게 이동할 수 있는, 보스 몬스터까지도 관통이 가능한 기술입니다.</item>
        <item>스트라이커는 엘리멘탈 건틀릿을 장착한 상태에서 적을 공격하여 엘리멘탈 버블이라는 특수한 게이지를 획득할 수 있습니다. 엘리멘탈 버블은 최대 3개까지 생성할 수 있고, 엘리멘탈 버블을 소모하여 오의 스킬을 사용하는 것이 가능합니다. 오의 스킬은 성능에 따라 사용되는 버블의 개수가 다릅니다.</item>
        <item>어둠 게이지를 가득 채우면 자신과 동일한 분신 페르소나를 소환해 은신할 수 있습니다. 은신 시간이 지속될수록 더욱 강한 공격이 가능합니다. 또한, 페르소나를 사용하지 않고 공격을 계속한다면 혼돈 게이지를 채울 수 있습니다. 혼돈 게이지가 가득 차면 혼돈 상태가 되어 더욱 빠르고 치명적인 공격을 사용할 수 있습니다.</item>
        <item>건슬링어는 세 가지 총기를 상황에 따라 자유자재로 변경하며 전투할 수 있습니다. 각 무기에 대응 되는 스킬이 존재하며. 핸드건의 경우 넓은 범위를 빠르고 화려하게 공격할 수 있고, 샷건은 가까운 적에게 강력한 대미지를 선사하며, 라이플은 멀리 떨어진 적을 견제하거나 마무리 일격을 날리기에 적합합니다.</item>
        <item>세레나데 바드는 세레나데 스킬이라는 특수한 스킬을 보유하고 있는데 이 스킬을 사용하기 위해서는 세레나데 버블이 필요합니다. 세레나데 버블은 최대 3개로 이루어져 있고, 세레나데 버블 1개를 소모하여 세레나데 스킬을 사용하는 것이 가능합니다. 세레나데 스킬은 파티원의 공격력을 증가시키거나, 체력을 회복시키는데 사용됩니다.</item>
        <item>고대정령 소환 서머너는 거대하고 강력한 고대의 정령들을 소환할 수 있습니다. 고대의 기운을 모으면 정령의 구슬이 생성되는데 이 구슬의 소모량에 따라서 보다 강력한 고대의 정령을 소환할 수 있게 됩니다. 상황에 맞춰 강력한 고대의 정령들을 소환하여 전투를 지배해보세요.</item>
        <item>블레이드는 공격 및 특정 스킬 적중 시, 블레이드 오브 게이지를 획득하고, 블레이드 오브가 한 개 이상 채워지면 블레이드 아츠 상태에 돌입할 수 있습니다. 블레이드 아츠 상태가 되면 블레이드 오브 게이지에 따라 공격속도, 이동속도 및 적에게 주는 피해가 상승하고 블레이드 아츠 상태 중에만 사용 가능한 강력한 블레이드 버스트 스킬을 사용할 수 있습니다.</item>
        <item>두 개의 스탠스를 자유롭게 변경할 수 있는 창술사는 스탠스를 유지하거나 적을 공격하는 것으로 듀얼 게이지를 최대 3단계까지 획득할 수 있습니다. 창술사는 스탠스 변경 시 보유한 듀얼 게이지를 모두 소모하여, 보유했던 게이지 단계에 따라 그에 걸맞는 강력한 효과를 얻을 수 있습니다.</item>
        <item>아르카나는 카드 게이지가 가득차면 카드 덱 안에서 랜덤하게 한장의 카드를 뽑을 수 있습니다. 카드 덱 안에는 다양한 효과를 가진 카드들이 존재 하지만, 어떠한 카드가 나올지는 아무도 알 수 없기에, 뽑힌 카드가 무엇인가에 따라서 전장의 운명은 크게 뒤바뀔 수 있습니다.</item>
        <item>홀리나이트는 전투 중 획득 가능한 신앙 게이지를 이용하여 자신의 검을 강화하거나 파티원의 전투 능력을 증가시킬 수 있습니다. 신의 집행자 스킬을 사용할 경우 신앙의 힘을 자신의 검에 집중시켜 검을 이용한 모든 공격 범위와 피해량을 증가시킬 수 있으며, 신성의 오라 스킬을 사용할 경우에는 자기 주변에 오라를 펼쳐 자신을 제외한 파티원들의 전투 능력을 증가시킬 수 있습니다.</item>
    </string-array>

</resources>