<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/toptab"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_toptap"
        android:textSize="35sp"
        android:layout_marginTop="10sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="104dp"
        android:text="e-mail"
        android:fontFamily="@font/mbc"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signup_emailbox"
        android:layout_width="207dp"
        android:layout_height="36dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/textbox"
        android:gravity="center"
        android:hint="@string/signup_emailHint"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="text"/>

    <Spinner
        android:id="@+id/signup_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/signup_emailbox"
        app:layout_constraintStart_toEndOf="@+id/signup_emailbox"
        app:layout_constraintTop_toTopOf="@+id/signup_emailbox" />

    <TextView
        android:id="@+id/signup_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/signup_nickname"
        android:fontFamily="@font/mbc"
        android:textSize="20sp"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email" />

    <EditText
        android:id="@+id/signup_nicknameHint"
        android:layout_width="207dp"
        android:layout_height="36dp"
        android:background="@drawable/textbox"
        android:gravity="center"
        android:hint="@string/signup_nicnameHint"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/signup_nickname"
        app:layout_constraintTop_toBottomOf="@+id/signup_nickname"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="text"/>

    <TextView
        android:id="@+id/signup_erroremail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/signup_erroremail"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/signup_email"
        app:layout_constraintStart_toEndOf="@+id/signup_email"
        app:layout_constraintTop_toTopOf="@+id/signup_email"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/Signup_errorNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/signup_errornickname"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/signup_nickname"
        app:layout_constraintStart_toEndOf="@+id/signup_nickname"
        app:layout_constraintTop_toTopOf="@+id/signup_nickname"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:text="@string/signup_name"
        android:fontFamily="@font/mbc"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_nickname" />

    <EditText
        android:id="@+id/signup_nameHint"
        android:layout_width="207dp"
        android:layout_height="36dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/textbox"
        android:gravity="center"
        android:hint="@string/signup_nameHint"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="text"/>

    <TextView
        android:id="@+id/signup_EmptyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/signup_errorname"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:text="@string/signup_password"
        android:fontFamily="@font/mbc"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/signup_EmptyPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_errorpassword"
        android:textColor="@color/red"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/signup_passwordHint"
        android:layout_width="207dp"
        android:layout_height="36dp"
        android:background="@drawable/textbox"
        android:layout_marginTop="5dp"
        android:hint="@string/signup_passwordHint"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        android:focusableInTouchMode="true"
        android:inputType="textPassword"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_pwlimit"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_passwordHint" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:text="@string/signup_checkpassword"
        android:fontFamily="@font/mbc"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        android:focusable="true"/>

    <TextView
        android:id="@+id/signup_errorPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_errorcheckpassword"
        android:textColor="@color/red"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/signup_checkPasswordHint"
        android:layout_width="207dp"
        android:layout_height="36dp"
        android:background="@drawable/textbox"
        android:gravity="center"
        android:hint="@string/signup_checkpasswordHint"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="textPassword"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signup_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/selector_button"
        android:foregroundGravity="center"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="122dp"
            android:layout_marginEnd="156dp"
            android:src="@drawable/btn_drawable_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.112" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="회원가입"
            android:textColor="@color/white"
            android:fontFamily="@font/nexoncart"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>